--- a/app/src/main/res/layout/crear_listas.xml
+++ b/app/src/main/res/layout/crear_listas.xml
@@ -9,18 +9,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/nombreListaCompra"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:id="@+id/textNombreProducto"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:contentDescription="@string/nombre_producto"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/nombreListaCompra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nombre_producto" />
+
+            <EditText
+                android:id="@+id/textNombreProducto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
