--- a/app/src/main/res/layout/plantilla_lista_compra.xml
+++ b/app/src/main/res/layout/plantilla_lista_compra.xml
@@ -25,6 +25,10 @@
             android:textAlignment="center"
             android:textSize="@dimen/tamanoFuente" />
 
+        <CheckBox
+            android:id="@+id/rowCogidoProducto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </LinearLayout>
